Fix bug in string2hash()

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,15 @@ Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.26]
+Date=2015-04-12T13:37:00
+Comments= <<EOT
+- Fix bug in string2hashref(), which failed on some strings, such as {a => 'b, c'}.
+string2hashref() is called by read_tree().
+Escaped chars are still not handled.
+- Add t/string2hash.t to test new code.
+EOT
+
 [V 1.25]
 Date=2015-03-22T11:42:00
 Comments= <<EOT
