Remove 'use open qw(:std :utf8);'

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,20 @@ Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.27]
+Date=2015-07-12T11:01:00
+Comments= <<EOT
+- Remove the line which reads 'use open qw(:std :utf8);'. As Tom Molesworth says:
+"Specifically, it turns on the UTF-8 encoding layer on STDIO when any code does
+'use Tree::DAG_Node'. That's no good when code is expecting a different encoding
+(raw, etc.)". See RT#105798. Karen Etheridge followed up with a comment about it appearing
+in another module of mine. Then I checked all my modules (including some not intended for
+publication - Local::*) and found about 28 offenders, with some using it inn multiple files.
+The original idea came from adopting what Tom Christiansen calls his 'Standard Preamble':
+http://www.perl.com/pub/2012/04/perlunicook-standard-preamble.html
+All tests still work after removing that line.
+EOT
+
 [V 1.26]
 Date=2015-04-12T13:37:00
 Comments= <<EOT
