--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,15 @@ Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.06
 Changelog.Parser=Config::IniFiles V 2.88
 
+[V 1.28]
+Date=2016-03-01T08:43:00
+Comments= <<EOT
+- No code changes.
+- Rework Makefile.PL so File::Spec, File::Temp, Test::More and Test::Pod are in TEST_REQUIRES.
+Many thanx to Kent Fredric in RT#112568 for this suggestion.
+- Expand the SYNOPSIS.
+EOT
+
 [V 1.27]
 Date=2015-07-12T11:01:00
 Comments= <<EOT
