--- a/Changelog.ini
+++ b/Changelog.ini
@@ -10,6 +10,7 @@ Comments= <<EOT
 - Rework Makefile.PL so File::Spec, File::Temp, Test::More and Test::Pod are in TEST_REQUIRES.
 Many thanx to Kent Fredric in RT#112568 for this suggestion.
 - Expand the SYNOPSIS.
+- Update MANIFEST.SKIP to include .gitignore.
 EOT
 
 [V 1.27]
