Add a note in Changes about the git tag

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -11,12 +11,14 @@ Comments= <<EOT
 Many thanx to Kent Fredric in RT#112568 for this suggestion.
 - Expand the SYNOPSIS.
 - Update MANIFEST.SKIP to include .gitignore.
-- Finally add lightweight git tags to distros, so that if you have a Bash alias such as
+- Finally add lightweight git tags to distros, so that if you have a Bash alias such as:
 alias gl='git log --decorate=full' you'll see something like these 5 lines:
 commit 2501bd9672244fe698c0f3e48e142637e92eb7e5 (HEAD, tag: refs/tags/1.28, refs/heads/master)
 Author: ronsavage <ron@savage.net.au>
 Date: Tue Mar 1 09:16:46 2016 +1100
 Update distmeta
+The command used to generate the tags looks like:
+git tag -afm 'V 1.28 @ Tue Mar 1 09:16:46 2016' 1.28
 EOT
 
 [V 1.27]
