Shift Test::Pod within Makefile.PL so as to indicate it's only used during development

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,16 @@ Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.06
 Changelog.Parser=Config::IniFiles V 2.88
 
+[V 1.29]
+Date=2016-03-01T13:39:00
+Comments= <<EOT
+- After another email exchange with Kent Fredric (via RT) and Karen Etheridge (via the
+cpan-testers-discuss mailing list), I've edited Makefile.PL, again, to indicate that
+Test::Pod is needed neither for building nor testing this module, but is only needed for
+development. Specifically, it's used by xt/author/pod.t, and not elsewhere. See
+https://metacpan.org/pod/CPAN::Meta::Spec#PREREQUISITES for more details.
+EOT
+
 [V 1.28]
 Date=2016-03-01T08:43:00
 Comments= <<EOT
