--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,16 @@
 [Module]
 Name=Tree::DAG_Node
-Changelog.Creator=Module::Metadata::Changes V 2.06
-Changelog.Parser=Config::IniFiles V 2.88
+Changelog.Creator=Module::Metadata::Changes V 2.12
+Changelog.Parser=Config::IniFiles V 2.94
+
+[V 1.30]
+Date=2018-01-26T15:32:00
+Comments= <<EOT
+- Explicitly escape { and } in a regexp because unescaped { issues a warning now and will become
+a fatal error in Perl V 5.32.
+- Adopt new repo structure. See
+http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
+EOT
 
 [V 1.29]
 Date=2016-03-01T13:39:00
