--- a/Changelog.ini
+++ b/Changelog.ini
@@ -8,7 +8,7 @@ Date=2018-02-14T09:08:00
 Comments= <<EOT
 - Clarify licence issue by changing the reference in the DAG_Node.pm file from Artistic V 2
 to Perl, so it now matches what is in Makefile.PL and the LICENSE file.
-$thanx x $many to Gregor Herrmann for reporting this via github.
+$thanx x $many to Gregor Herrmann (Debian Perl Group) for reporting this via github.
 EOT
 
 [V 1.30]
