--- a/Changelog.ini
+++ b/Changelog.ini
@@ -7,7 +7,8 @@ Changelog.Parser=Config::IniFiles V 2.94
 Date=2018-02-14T09:08:00
 Comments= <<EOT
 - Clarify licence issue by changing the reference in the DAG_Node.pm file from Artistic V 2
-to Perl, so it now matches what is in Makefile.PL and the LICENSE file.
+to Perl, so it now matches what I preemptively put in Makefile.PL and the LICENSE file.
+Sean Burke has kindly agreed to this change.
 $thanx x $many to Gregor Herrmann (Debian Perl Group) for reporting this via github.
 EOT
 
