Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,11 @@
 [Module]
 Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.12
-Changelog.Parser=Config::IniFiles V 2.94
+Changelog.Parser=Config::IniFiles V 3.000003
+
+[V 1.32]
+Date=2021-02-01T15:56:00
+Comments=- Update Makefile.PL and POD to change RT to github.
 
 [V 1.31]
 Date=2018-02-14T09:08:00
