--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,19 @@
 [Module]
 Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.12
-Changelog.Parser=Config::IniFiles V 3.000002
+Changelog.Parser=Config::IniFiles V 3.000003
+
+[V 1.33]
+Date=2025-03-20T11:16:00
+Deploy.Action=Upgrade
+Deploy.Reason=Security
+Comments= <<EOT
+- Replace the discouraged File::Slurp::Tiny with File::Slurper.
+Thanx to Marcel Telka for the report.
+But why not use File::Slurp? Because...
+https://blogs.perl.org/users/leon_timmermans/2015/08/fileslurp-is-broken-and-wrong.html
+- Add a security policy file SECURITY.md
+EOT
 
 [V 1.32]
 Date=2021-02-01T15:56:00
