--- a/Changelog.ini
+++ b/Changelog.ini
@@ -13,6 +13,7 @@ Thanx to Marcel Telka for the report.
 But why not use File::Slurp? Because...
 https://blogs.perl.org/users/leon_timmermans/2015/08/fileslurp-is-broken-and-wrong.html
 - Add a security policy file SECURITY.md
+- Update Makefile.PL to include both ExtUtils::MakeMaker and perl.
 EOT
 
 [V 1.32]
