Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -87,7 +87,7 @@ Comments= <<EOT
 'use Tree::DAG_Node'. That's no good when code is expecting a different encoding
 (raw, etc.)". See RT#105798. Karen Etheridge followed up with a comment about it appearing
 in another module of mine. Then I checked all my modules (including some not intended for
-publication - Local::*) and found about 28 offenders, with some using it inn multiple files.
+publication - Local::*) and found about 28 offenders, with some using it in multiple files.
 The original idea came from adopting what Tom Christiansen calls his 'Standard Preamble':
 http://www.perl.com/pub/2012/04/perlunicook-standard-preamble.html
 All tests still work after removing that line.
