Fix some spelling errors in the Change* file. Chop usage of 'use open'. Restore full regexp zapping CR and LF

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -223,7 +223,7 @@ Comments= <<EOT
 - Add method read_tree(), for text files. It uses Perl6::Slurp (which supports utf8).
 - Add methods read_attributes() and string2hashref($s) for use by read_tree().
 - Add t/read.tree.t to test read_tree().
-- Add t/tree.utf8.attrbiutes.txt, in utf8, for use by t/read.tree.t.
+- Add t/tree.utf8.attributes.txt, in utf8, for use by t/read.tree.t.
 - Add t/tree.with.attributes.txt and t/tree.without.attributes.txt for use by t/read.tree.t.
 - Make Perl V 5.8.1 a pre-req so we have access to the utf8 pragma.
 EOT
