Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,20 @@ Name=Tree::DAG_Node
 Changelog.Creator=Module::Metadata::Changes V 2.12
 Changelog.Parser=Config::IniFiles V 3.000003
 
+[V 1.35]
+Date=2025-05-12T17:00:00
+Comments= <<EOT
+- Change sub hashref2string() line 726 so it does not generate an error or warning when
+the node or node name is '' (empty string), undef or 0 (zero).
+- Change test data so that when stringifying a tree, node names without attributes are
+output as (e.g.) 'lexeme: Attributes{}' rather than as just 'lexeme'. This was alleged
+to have been done as per the last dot point under v 1.34 below, but was not done properly.
+- This last point also affects the related module Data::RenderAsTree, which ships with a
+range of test programs and sample scripts which futher exercise these features.
+The point of these latter samples is so you can use them without having to fiddle about
+removing the test code in the corresponding test scripts.
+EOT
+
 [V 1.34]
 Date=2025-04-23T17:01:00
 Comments= <<EOT
